--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "standard || exit 0",
-    "lint:fix": "standard --fix || exit 0"
+    "lint": "standard | snazzy || exit 0",
+    "lint:fix": "standard --fix | snazzy || exit 0"
   },
   "devDependencies": {
     "ajv": "^5.5.2",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "react-scripts": "^1.1.4",
+    "snazzy": "^7.1.1",
     "standard": "^11.0.1"
   }
 }
