--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "devDependencies": {
     "ajv": "^5.5.2",
+    "babel-eslint": "^7.2.3",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "react-scripts": "^1.1.4",
     "snazzy": "^7.1.1",
     "standard": "^11.0.1"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
