--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "standard": "^11.0.1"
   },
   "standard": {
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "env": {
+      "jest": true
+    }
   }
 }
