--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,5 +32,6 @@ jobs:
           project-name: scale-of-belief-web
           environment: ${{ github.ref == 'refs/heads/master' && 'production' || 'staging' }}
           type: ALL
+      - run: npm ci
       - run: npm run build
       - run: aws s3 sync build/ s3://${{ secrets.AWS_S3_BUCKET }} --acl public-read --cache-control "max-age=300"
