Use Okta for login

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:3000/api
-REACT_APP_SERVICE_URL=http://localhost:3000/api/login
-REACT_APP_KEY_CLIENT_ID=fake
-REACT_APP_KEY_URL=https://thekey.me/cas
+REACT_APP_API_URL=http://localhost:3000/development/api
+REACT_APP_SERVICE_URL=http://localhost:3000/development/api/login
+REACT_APP_OKTA_CLIENT_ID=
+REACT_APP_OKTA_ISSUER=https://signon.okta.com/oauth2/default
